; ModuleID = '/home/carl/AnghaBench/reactos/dll/win32/jscript/extr_date.c_Date_toLocaleDateString.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/win32/jscript/extr_date.c_Date_toLocaleDateString.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_11__ = type { i32 }
%struct.TYPE_12__ = type { i32 }
%struct.TYPE_13__ = type { i32 }

@.str = private unnamed_addr constant [2 x i8] c"\0A\00", align 1
@JS_E_DATE_EXPECTED = common dso_local global i32 0, align 4
@S_OK = common dso_local global i32 0, align 4
@DATE_LONGDATE = common dso_local global i32 0, align 4
@E_OUTOFMEMORY = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.TYPE_11__*, i32*, i32, i32, i32*, i32*)* @Date_toLocaleDateString to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @Date_toLocaleDateString(%struct.TYPE_11__* %0, i32* %1, i32 %2, i32 %3, i32* %4, i32* %5) #0 {
  %7 = alloca i32, align 4
  %8 = alloca %struct.TYPE_11__*, align 8
  %9 = alloca i32*, align 8
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca i32*, align 8
  %13 = alloca i32*, align 8
  %14 = alloca %struct.TYPE_12__, align 4
  %15 = alloca %struct.TYPE_13__*, align 8
  %16 = alloca i32*, align 8
  %17 = alloca i32, align 4
  %18 = alloca %struct.TYPE_12__, align 4
  %19 = alloca i32*, align 8
  store %struct.TYPE_11__* %0, %struct.TYPE_11__** %8, align 8
  store i32* %1, i32** %9, align 8
  store i32 %2, i32* %10, align 4
  store i32 %3, i32* %11, align 4
  store i32* %4, i32** %12, align 8
  store i32* %5, i32** %13, align 8
  %20 = call i32 @TRACE(i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str, i64 0, i64 0))
  %21 = load i32*, i32** %9, align 8
  %22 = call %struct.TYPE_13__* @date_this(i32* %21)
  store %struct.TYPE_13__* %22, %struct.TYPE_13__** %15, align 8
  %23 = icmp ne %struct.TYPE_13__* %22, null
  br i1 %23, label %28, label %24

24:                                               ; preds = %6
  %25 = load %struct.TYPE_11__*, %struct.TYPE_11__** %8, align 8
  %26 = load i32, i32* @JS_E_DATE_EXPECTED, align 4
  %27 = call i32 @throw_type_error(%struct.TYPE_11__* %25, i32 %26, i32* null)
  store i32 %27, i32* %7, align 4
  br label %93

28:                                               ; preds = %6
  %29 = load %struct.TYPE_13__*, %struct.TYPE_13__** %15, align 8
  %30 = getelementptr inbounds %struct.TYPE_13__, %struct.TYPE_13__* %29, i32 0, i32 0
  %31 = load i32, i32* %30, align 4
  %32 = call i64 @isnan(i32 %31)
  %33 = icmp ne i64 %32, 0
  br i1 %33, label %34, label %43

34:                                               ; preds = %28
  %35 = load i32*, i32** %13, align 8
  %36 = icmp ne i32* %35, null
  br i1 %36, label %37, label %41

37:                                               ; preds = %34
  %38 = call i32* (...) @jsstr_nan()
  %39 = call i32 @jsval_string(i32* %38)
  %40 = load i32*, i32** %13, align 8
  store i32 %39, i32* %40, align 4
  br label %41

41:                                               ; preds = %37, %34
  %42 = load i32, i32* @S_OK, align 4
  store i32 %42, i32* %7, align 4
  br label %93

43:                                               ; preds = %28
  %44 = load %struct.TYPE_13__*, %struct.TYPE_13__** %15, align 8
  %45 = getelementptr inbounds %struct.TYPE_13__, %struct.TYPE_13__* %44, i32 0, i32 0
  %46 = load i32, i32* %45, align 4
  %47 = load %struct.TYPE_13__*, %struct.TYPE_13__** %15, align 8
  %48 = call i32 @local_time(i32 %46, %struct.TYPE_13__* %47)
  %49 = call i32 @create_systemtime(i32 %48)
  %50 = getelementptr inbounds %struct.TYPE_12__, %struct.TYPE_12__* %18, i32 0, i32 0
  store i32 %49, i32* %50, align 4
  %51 = bitcast %struct.TYPE_12__* %14 to i8*
  %52 = bitcast %struct.TYPE_12__* %18 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align 4 %51, i8* align 4 %52, i64 4, i1 false)
  %53 = getelementptr inbounds %struct.TYPE_12__, %struct.TYPE_12__* %14, i32 0, i32 0
  %54 = load i32, i32* %53, align 4
  %55 = icmp slt i32 %54, 1601
  br i1 %55, label %60, label %56

56:                                               ; preds = %43
  %57 = getelementptr inbounds %struct.TYPE_12__, %struct.TYPE_12__* %14, i32 0, i32 0
  %58 = load i32, i32* %57, align 4
  %59 = icmp sgt i32 %58, 9999
  br i1 %59, label %60, label %64

60:                                               ; preds = %56, %43
  %61 = load %struct.TYPE_13__*, %struct.TYPE_13__** %15, align 8
  %62 = load i32*, i32** %13, align 8
  %63 = call i32 @dateobj_to_date_string(%struct.TYPE_13__* %61, i32* %62)
  store i32 %63, i32* %7, align 4
  br label %93

64:                                               ; preds = %56
  %65 = load i32*, i32** %13, align 8
  %66 = icmp ne i32* %65, null
  br i1 %66, label %67, label %91

67:                                               ; preds = %64
  %68 = load %struct.TYPE_11__*, %struct.TYPE_11__** %8, align 8
  %69 = getelementptr inbounds %struct.TYPE_11__, %struct.TYPE_11__* %68, i32 0, i32 0
  %70 = load i32, i32* %69, align 4
  %71 = load i32, i32* @DATE_LONGDATE, align 4
  %72 = call i32 @GetDateFormatW(i32 %70, i32 %71, %struct.TYPE_12__* %14, i32* null, i32* null, i32 0)
  store i32 %72, i32* %17, align 4
  %73 = load i32, i32* %17, align 4
  %74 = sub nsw i32 %73, 1
  %75 = call i32* @jsstr_alloc_buf(i32 %74, i32** %19)
  store i32* %75, i32** %16, align 8
  %76 = load i32*, i32** %16, align 8
  %77 = icmp ne i32* %76, null
  br i1 %77, label %80, label %78

78:                                               ; preds = %67
  %79 = load i32, i32* @E_OUTOFMEMORY, align 4
  store i32 %79, i32* %7, align 4
  br label %93

80:                                               ; preds = %67
  %81 = load %struct.TYPE_11__*, %struct.TYPE_11__** %8, align 8
  %82 = getelementptr inbounds %struct.TYPE_11__, %struct.TYPE_11__* %81, i32 0, i32 0
  %83 = load i32, i32* %82, align 4
  %84 = load i32, i32* @DATE_LONGDATE, align 4
  %85 = load i32*, i32** %19, align 8
  %86 = load i32, i32* %17, align 4
  %87 = call i32 @GetDateFormatW(i32 %83, i32 %84, %struct.TYPE_12__* %14, i32* null, i32* %85, i32 %86)
  %88 = load i32*, i32** %16, align 8
  %89 = call i32 @jsval_string(i32* %88)
  %90 = load i32*, i32** %13, align 8
  store i32 %89, i32* %90, align 4
  br label %91

91:                                               ; preds = %80, %64
  %92 = load i32, i32* @S_OK, align 4
  store i32 %92, i32* %7, align 4
  br label %93

93:                                               ; preds = %91, %78, %60, %41, %24
  %94 = load i32, i32* %7, align 4
  ret i32 %94
}

declare dso_local i32 @TRACE(i8*) #1

declare dso_local %struct.TYPE_13__* @date_this(i32*) #1

declare dso_local i32 @throw_type_error(%struct.TYPE_11__*, i32, i32*) #1

declare dso_local i64 @isnan(i32) #1

declare dso_local i32 @jsval_string(i32*) #1

declare dso_local i32* @jsstr_nan(...) #1

declare dso_local i32 @create_systemtime(i32) #1

declare dso_local i32 @local_time(i32, %struct.TYPE_13__*) #1

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memcpy.p0i8.p0i8.i64(i8* noalias nocapture writeonly, i8* noalias nocapture readonly, i64, i1 immarg) #2

declare dso_local i32 @dateobj_to_date_string(%struct.TYPE_13__*, i32*) #1

declare dso_local i32 @GetDateFormatW(i32, i32, %struct.TYPE_12__*, i32*, i32*, i32) #1

declare dso_local i32* @jsstr_alloc_buf(i32, i32**) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
